# chronix

./: .gitignore  README.md  pyproject.toml
chronix/: __init__.py  __main__.py
chronix/cli/: __init__.py  app.py  commands.py  config_commands.py  formatting.py  sync_helpers.py
chronix/config/: __init__.py  converters.py  settings.py
chronix/core/: __init__.py  aggregation.py  dependencies.py  models.py  scheduler.py  services.py  todo.py
chronix/integrations/: __init__.py  base.py
chronix/integrations/google_calendar/: __init__.py  client.py  models.py  sync_service.py
chronix/integrations/google_docs/: __init__.py  auth.py  client.py  mapper.py  parser.py
chronix/utils/: time.py
